<resources>
    <string name="app_name">Flip Game</string>
    <string name="username">User name</string>
    <string name="flipmenu">Flip Menu</string>
    <string name="grp1">Game</string>
    <string name="optJ1">New game</string>
    <string name="optJ2">Restart game</string>
    <string name="grp2">Options</string>
    <string name="optC1">Game configuration</string>
    <string name="optV1">List of played games</string>
    <string name="optExit">Exit</string>

    <string name="seekbarX">Elements on X axis:</string>
    <string name="seekbarY">Elements on Y axis:</string>
    <string name="numMax">Maximum number of elements:</string>

    <string name="colorOrNumber">Style of boxes:</string>
    <string name="colorOpt">Colors</string>
    <string name="numOpt">Numbers</string>

    <string name="prefs">Preferences:</string>
    <string name="vibr">Vibration</string>
    <string name="soun">Sound</string>

    <string name="accept">Accept</string>
    <string name="back">Back</string>

    <string name="changedConfig">Game\'s been restarted!</string>

    <string name="dTitle">YOU WON!</string>
    <string name="dDesc">Congratulations</string>
    <string name="dUser">Anonymous</string>
    <string name="cbText">Don\'t save</string>
    <string name="restart">Play Again</string>
    <string name="newGame">New Game</string>

    <string name="tituloBBDD"><u>Game record</u></string>
    <string name="timeBBDD"><u>Time</u></string>
    <string name="nameBBDD"><u>Username</u></string>
    <string name="dispoBBDD"><u>Setup</u></string>
    <string name="indiceBBDD"><u>Max</u></string>
    <string name="pulsaBBDD"><u>Puls</u></string>
</resources>
