<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/sub_juego"
        android:title="@string/grp1">
        <menu>
            <item
                android:id="@+id/juego_opcion_1"
                android:title="@string/optJ1"/>
            <item
                android:id="@+id/juego_opcion_2"
                android:title="@string/optJ2"/>
        </menu>
    </item>
    <item
        android:id="@+id/sub_opciones"
        android:title="@string/grp2">
        <menu>
            <item
                android:id="@+id/opts_opcion_1"
                android:title="@string/optC1"/>
            <item
                android:id="@+id/opts_opcion_2"
                android:title="@string/optC2"/>
        </menu>
    </item>

    <item
        android:id="@+id/opt_salir"
        android:title="@string/optExit"/>
</menu>