<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_configuracion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.islasf.android.grupo5.ConfiguracionActivity"
        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:text="@string/seekbarX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textoEjeX"
            android:layout_weight="1"/>

        <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="13"
            android:progress="0"
            android:id="@+id/barraElementosX"
            android:layout_weight="1"/>

        <TextView
            android:text="@string/seekbarY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textoEjeY"
            android:layout_weight="1"/>

        <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="17"
            android:progress="1"
            android:id="@+id/barraElementosY"
            android:layout_weight="1"/>

        <TextView
            android:text="@string/numMax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textoMax"
            android:layout_weight="1"/>

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="3"
        android:progress="1"
        android:id="@+id/barraElementosIndice"
        android:layout_gravity="center"
        android:layout_weight="1"/>

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rGroup"
            android:layout_weight="1">

            <TextView
                android:text="@string/colorOrNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4" />

            <RadioButton
                android:text="@string/colorOpt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rButtColores"
                android:checked="true" />

            <RadioButton
                android:text="@string/numOpt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rButtNumeros" />

        </RadioGroup>

    <TextView
        android:text="@string/prefs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_weight="1"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <CheckBox
                android:text="@string/vibr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbVibr"
                android:checked="true"
                android:layout_marginEnd="10dp"/>

            <CheckBox
                android:text="@string/soun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbSoni"
                android:checked="true" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|end"
            android:layout_weight="1">

            <Button
                android:text="@string/accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnConfirmar"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                style="@style/Widget.AppCompat.Button"
                android:onClick="aceptarConfiguracion"/>

            <Button
                android:text="@string/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnVolver"
                style="@style/Widget.AppCompat.Button"
                android:onClick="volver"/>

        </LinearLayout>

    </LinearLayout>
